# qwen3_vl

./: .gitignore  AGENTS.md  README.md  mise.toml  pyproject.toml  qwen-vl-experimentation-bringup.txt  qwen3vl-paper-reading-companion.org
.agents/skills/architect/: SKILL.md
.agents/skills/arena/: SKILL.md
.agents/skills/automate-me/: SKILL.md
.agents/skills/figure-it-out/: SKILL.md
.agents/skills/how/: SKILL.md
.agents/skills/interrogate/: SKILL.md
.agents/skills/poteto-mode/: SKILL.md
.agents/skills/principle-build-the-lever/: SKILL.md
.agents/skills/principle-experience-first/: SKILL.md
.agents/skills/python-style-touchup/: SKILL.md
.agents/skills/reflect/: SKILL.md
.agents/skills/show-me-your-work/: SKILL.md
.agents/skills/unslop/: SKILL.md
.agents/skills/why/: SKILL.md
autonomy/: README.md  pyproject.toml
autonomy/autonomy/: activities.py  cli.py  done_gate.py  sandbox.py  worker.py  workflows.py  worktree.py
autonomy/autonomy/executors/: _torch_trial_entry.py  base.py  claude_code.py  shell.py  torch_trial.py
autonomy/autonomy/org/: mutator.py  parser.py  schema.py
autonomy/autonomy/smoke/: gpt2_synthetic.py
autonomy/autonomy/templates/: tracker.org.tmpl
autonomy/tests/: test_done_gate.py  test_executors.py  test_org.py  test_sandbox.py  test_smoke.py  test_workflow_e2e.py  test_worktree.py
docs/: python-style-guide.md
docs/superpowers/plans/: 2026-05-13-b200-profiled-experimentation.md  2026-05-13-b200-real-probe-run.md  (+4 more)
qwen-vl-finetune/: .gitignore  experiments_plan.txt
qwen-vl-finetune/experiments/: __init__.py  qwen_adapter.py  qwen_experiments.py  qwen_temporal.py  qwen_workflows.py  results.tsv
qwen-vl-finetune/research/: README.md  __init__.py  activities.py  coco_subagent.py  experiment_helpers.py  local_temporal.py  metrics.py  models.py  profile_config.py  run_profiled.sh  runner.py  selection.py  start.py  subagents.py  worker.py  workflows.py
qwen-vl-finetune/scripts/: sft_qwen3_8b.sh  unsloth_qwen3vl_8b.py  vwi_to_unsloth.py
research/: __init__.py  activities.py  adapters.py  artifacts.py  cli.py  coco_cli.py  db.py  deep_research_activities.py  deep_research_models.py  models.py  preflight.py  probes.py  reports.py  runners.py  temporal.py  workflows.py
tests/research/: fake_adapter.py  test_activities.py  test_adapters.py  test_artifacts.py  test_cli.py  test_coco_cli.py  test_db.py  test_deep_research_activities.py  test_deep_research_models.py  test_imports.py  test_manager_cli.py  test_mise.py  test_no_autonomy.py  test_no_qwen_research_shadow.py  test_preflight.py  test_probe_cli.py  test_probes.py  test_reports.py  test_runners.py  test_temporal.py  test_workflows.py
(+110 files in other folders)
